// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getColorVariations en locale 1`] = `
[
  {
    "color": "Hot Pink Combo",
    "image_groups": [
      {
        "_type": "image_group",
        "images": [
          {
            "_type": "image",
            "alt": "Floral Dress, Hot Pink Combo, large",
            "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
            "title": "Floral Dress, Hot Pink Combo",
          },
          {
            "_type": "image",
            "alt": "Floral Dress, Hot Pink Combo, large",
            "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
            "title": "Floral Dress, Hot Pink Combo",
          },
        ],
        "view_type": "large",
      },
      {
        "_type": "image_group",
        "images": [
          {
            "_type": "image",
            "alt": "Floral Dress, Hot Pink Combo, small",
            "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
            "title": "Floral Dress, Hot Pink Combo",
          },
          {
            "_type": "image",
            "alt": "Floral Dress, Hot Pink Combo, small",
            "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
            "title": "Floral Dress, Hot Pink Combo",
          },
        ],
        "view_type": "small",
      },
      {
        "_type": "image_group",
        "images": [
          {
            "_type": "image",
            "alt": "Floral Dress, Hot Pink Combo, swatch",
            "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw506aa734/images/swatch/PG.10237222.JJB52A0.CP.jpg",
            "title": "Floral Dress, Hot Pink Combo",
          },
        ],
        "view_type": "swatch",
      },
    ],
    "variationURL": "/on/demandware.store/Sites-Algolia_SFRA-Site/en/Product-Show?pid=25592581M&dwvar_25592581M_color=JJB52A0",
  },
]
`;

exports[`getColorVariations fr locale 1`] = `
[
  {
    "color": "Combo rose vif",
    "image_groups": [
      {
        "_type": "image_group",
        "images": [
          {
            "_type": "image",
            "alt": "Robe florale, Combo rose vif, large",
            "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
            "title": "Robe florale, Combo rose vif",
          },
          {
            "_type": "image",
            "alt": "Robe florale, Combo rose vif, large",
            "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
            "title": "Robe florale, Combo rose vif",
          },
        ],
        "view_type": "large",
      },
      {
        "_type": "image_group",
        "images": [
          {
            "_type": "image",
            "alt": "Robe florale, Combo rose vif, small",
            "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
            "title": "Robe florale, Combo rose vif",
          },
          {
            "_type": "image",
            "alt": "Robe florale, Combo rose vif, small",
            "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
            "title": "Robe florale, Combo rose vif",
          },
        ],
        "view_type": "small",
      },
      {
        "_type": "image_group",
        "images": [
          {
            "_type": "image",
            "alt": "Robe fleurie, Mix rose vif, swatch",
            "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw506aa734/images/swatch/PG.10237222.JJB52A0.CP.jpg",
            "title": "Robe fleurie, Mix rose vif",
          },
        ],
        "view_type": "swatch",
      },
    ],
    "variationURL": "/on/demandware.store/Sites-Algolia_SFRA-Site/fr/Product-Show?pid=25592581M&dwvar_25592581M_color=JJB52A0",
  },
]
`;
